# axum-cookbook

./: .env  .rustfmt.toml  Cargo.toml  README.md  rustfmt.toml  sqlx-data.json
docs/: axum.md
migrations/: 20210804133523_change-recipe-table.sql  20210805220209_create-user-table.sql
scripts/: init_db.sh
src/: handlers.rs  main.rs  models.rs
