[package]
name = "axum-cookbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.2"
tokio = { version = "1.9.0", features = ["full"] }
hyper = { version = "0.14.11", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.5.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "time" ] }
dotenv = "0.15.0"
